# university-projects

./: .gitignore  README.md
ARKO/MIPS/: README.md  quadratic-func.asm
BCS/5_semester/AAL/: CMakeLists.txt
BCS/5_semester/AAL/data/: WTF????.txt  out3.txt
BCS/5_semester/AAL/inc/algorithm/: alg_params.hpp  algorithm.hpp  benchmark.hpp  bfs.hpp  cmyk_algorithm.hpp  generator.hpp  graph.hpp  property.hpp  robot.hpp
BCS/5_semester/AAL/inc/gui/: inputstringdialog.h  inputstringvalidator.h  mainwindow.h
BCS/5_semester/AAL/src/algorithm/: astar.cc  graph.cc  naive.cc  robot.cc
BCS/5_semester/AAL/src/gui/: aalbackend.cpp  container.cpp  mainwindow.ui
BCS/5_semester/AAL/tests/src/: astar.cc  catch_main.cc  graph_test.cc  naive_test.cc
BCS/5_semester/AAL/tools/: benchmark2.py  plot.py  plot2.py  table.py
BCS/6_semester/UNIX/: .gitmodules  CMakeLists.txt
BCS/6_semester/UNIX/include/: common.hpp  serializer.hpp  service_thread.hpp
BCS/6_semester/UNIX/lib/loguru/: loguru.cpp  loguru.hpp
BCS/6_semester/UNIX/src/: linda_common.cpp  parser.cpp  server.cpp  service_thread.cpp
BCS/6_semester/UNIX/test/integration/: run_all.sh
BCS/6_semester/UNIX/test/integration/input_removing_tuples/: client1.sh  client2.sh  input.txt  run.sh
BCS/6_semester/UNIX/test/integration/read_after_input/: input.txt  run.sh
BCS/6_semester/UNIX/test/integration/read_after_write/: run.sh
BCS/6_semester/UNIX/test/integration/wait_with_input/: client1.sh  client2.sh  input.txt  input2.txt  run.sh
BCS/6_semester/UNIX/test/integration/wait_with_read/: client1.sh  input.txt  input2.txt  run.sh
BCS/6_semester/UNIX/test/unit/: hello_gtest.cpp  serialization.cpp
BCS/7_semester/PAIN/qt-sensors-widgets-main/: CMakeLists.txt  README.md  mainwindow.ui
BCS/7_semester/PAIN/qt-sensors-widgets-main/process_list_model/: process_list_model.cpp
BCS/7_semester/PAIN/qt-sensors-widgets-main/sensor_model/: sensor_model.cpp  sensor_probe.h
BD1/: nfz.dmd  sprawkoBD1.odt  sprawko_bd1.odt
BD1/Ex1/: moje_zadanie.txt
BD1/Ex2/: choroba.sql  dokument.sql  lekarz.sql  oddzial.sql  pacjent.sql  recepta.sql  skierowanie.sql  szczepienie.sql
BD1/Ex3/: sprawko_bd1.odt
BD1/Ex5-6/: BasicQuery.java  README.md  Transaction.java  result
BD1/Ex7/: sprawozdanie_Damian_Kolaska.odt
BD1/Ex8/: Sprawozdanie_cw_8.odt
BD1/Ex9_10/: create.sql  index.sql.txt  indexes.sql  test.sql  zad10.sql
BD1/nfz/: dl_settings.xml
BSc/2_semester/PROI/sfml-box2d-platformer/: .gitignore  CMakeLists.txt  MANUAL.md
BSc/2_semester/PROI/sfml-box2d-platformer/include/: debug_manager.h  scene.h  world.h
BSc/2_semester/PROI/sfml-box2d-platformer/include/entity/: entity.h
BSc/2_semester/PROI/sfml-box2d-platformer/src/: background_manager.cc  debug_manager.cc  game.cc  main.cc  world.cc
BSc/2_semester/PROI/sfml-box2d-platformer/src/entity/: player.cc
BSc/5_semester/AAL/tests/: CMakeLists.txt
BSc/5_semester/AAL/tests/src/: bfs_test.cc  unit_tests.cc
BSc/5_semester/GKOM/zaglowiec/: CMakeLists.txt  README.md
BSc/5_semester/GKOM/zaglowiec/project/include/: terrain.hpp
BSc/5_semester/GKOM/zaglowiec/project/include/entity/complex/: lighthouse.hpp
BSc/5_semester/GKOM/zaglowiec/project/include/lighting/: light_factory.hpp
BSc/5_semester/GKOM/zaglowiec/project/include/renderer/: master_renderer.hpp
BSc/5_semester/GKOM/zaglowiec/project/include/shader/: entity_shader.hpp
BSc/5_semester/GKOM/zaglowiec/project/src/: display_manager.cpp  terrain.cpp
BSc/5_semester/GKOM/zaglowiec/project/src/entity/: shape_factory.cpp
BSc/5_semester/GKOM/zaglowiec/res/shaders/: entity_shader.frag
BSc/6_semester/TIN/: CMakeLists.txt
BSc/6_semester/TIN/data/: example2.sched  example3.sched  panel_2.conf
BSc/6_semester/TIN/docs/: client_state_diagram.puml  server_state_diagram.puml  wstepna.tex
BSc/6_semester/TIN/examples/: CMakeLists.txt
BSc/6_semester/TIN/include/: cli.hpp  common.hpp  exceptions.hpp  file_serializer.hpp  message.hpp  message_queue.hpp  network_utils.hpp  time.hpp
BSc/6_semester/TIN/include/client/: utils.hpp
BSc/6_semester/TIN/lib/loguru/: CMakeLists.txt
BSc/6_semester/TIN/src/: cli.cpp  file_serializer.cpp  message_queue.cpp  time.cpp
BSc/6_semester/TIN/src/server/: main.cpp
BSc/6_semester/TIN/test/unit/: network_utils.cpp
BSc/6_semester/TIN/test/unit/data/: panel.conf
BSc/6_semester/TIN/wireshark/: README.md  tinyad-protocol.lua
MSc/1_semester/PORR/: .gitignore  CMakeLists.txt  PORR_prezentacja.pptx  README.md
MSc/1_semester/PORR/doc/: dokumentacja.odt  dokumentacja_etap_1.md  scenariusze_badań.md
MSc/1_semester/PORR/include/: matplotlibcpp.h  plots.hpp  random_search.hpp  swarm_search.hpp  test_functions.hpp  utilities.hpp
MSc/1_semester/PORR/src/: plots.cpp  random_search.cpp  swarm_search.cpp  test_functions.cpp
MSc/1_semester/PORR/src/programs/: plotter.cpp  runner.cpp
MSc/1_semester/PORR/test_scripts/: create_test_best_after_time_plots.py  create_test_parallelism_plots.py  test_best_after_time_full.sh  test_best_after_time_random.sh  test_best_after_time_swarm.sh  test_parallelism_full.sh  test_parallelism_random.sh  test_parallelism_swarm.sh
MSc/3_semester/KRYS/KRYS_ketje-cipher/: CMakeLists.txt  README.md  main.cpp
MSc/3_semester/KRYS/KRYS_ketje-cipher/include/: monkeyduplex.hpp  monkeywrap.hpp  utils.hpp
MSc/3_semester/KRYS/KRYS_ketje-cipher/lib/KeccakTools/: CMakeLists.txt
MSc/3_semester/KRYS/KRYS_ketje-cipher/perf/: perf_tester.py
MSc/3_semester/KRYS/KRYS_ketje-cipher/src/: monkeyduplex.cpp  monkeywrap.cpp  utils.cpp
MSc/3_semester/KRYS/KRYS_ketje-cipher/test/: test_ketje.cpp  test_ketje_keccaktools.cpp
PODA/: IOSymulator.GTX  zad_kombinacyjne.gx3
PODA/Z2/: KoncepcikPODAMichauv2.odt  LiniaMontazowa_ProgramSterownika.gx3  LiniaMontazowa_Wizualizacja.GTX  Z2-12.docx  backup.gx3  p123.gx3  p1andp2.gx3  test.gx3  tylkoDlaP1.gx3
PODA/Z3/: Lab3.gx3  panel.GTX
PODA/Z4/: serwo.gx3
PODA/Z5/: Lab5_JG.gx3  PODA_L5_zad2.docx  Test.GTX  notatki  proj.GTX
PRI/: README.md
PRI/hash_table/: panstwa.txt
PROI/sfml-box2d-platformer/: README.md
SOI/: README.md
(+1269 files in other folders)
